--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
-[class*="col-"] {
+/*[class*="col-"] {
 	border: 1px solid;
   height:100px;
   
+}*/
+.tableau td {
+    width:50px;
+    height:50px;
+    border:1px solid white;
 }
-.black{
-       background:black;
+
+.tableau tr {
+    margin:1em;
 }
-.white
-{
-       background:white;
+
+.tableau {
+    border:2px solid black;
+}
+.black {
+	background-color: black;
 }
